# consumer-purchase-analysis

./: .gitignore  README.md  black_friday_EDA.ipynb  main.py  pyproject.toml
