[tool.poetry]
name = "blackfriday-eda-prep"
version = "0.1.0"
description = ""
authors = ["Nathan Souza <naathanmarinho11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
